# fastapi-listings

./: .dockerignore  .excalidraw.json  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  listings.py
app/core/: __init__.py  config.py
app/crud/: crud.py
app/database/: __init__.py  session.py
app/models/: listings.py
app/schemas/: listings.py
docs/: README.md
src/: db.sqlite3  main.py
src/api/: __init__.py
src/api/v1/: __init__.py  listing.py
src/core/: config.py
src/db/: init_db.py  session.py
src/models/: listing.py
src/schemas/: listing.py
src/services/: listing.py
